# stream-addin

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Demo.xlsx  Install.bat
src/: xll.cpp
