cmake_minimum_required(VERSION 3.20)
project(stream-addin LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if (NOT DEFINED EXCEL_SDK_ROOT OR EXCEL_SDK_ROOT STREQUAL "")
    message(FATAL_ERROR "EXCEL_SDK_ROOT is not set. Provide -DEXCEL_SDK_ROOT=... or set the environment variable.")
endif ()
set(EXCEL_SDK_INCLUDE_DIRS
        "${EXCEL_SDK_ROOT}/INCLUDE"
        "${EXCEL_SDK_ROOT}/SAMPLES/FRAMEWRK"
)
set(EXCEL_SDK_LIBDIR "${EXCEL_SDK_ROOT}/LIB/x64")
find_library(XLCALL32_LIB NAMES XLCALL32 xlcall32 PATHS "${EXCEL_SDK_LIBDIR}" REQUIRED)
find_library(FRAMEWRK_LIB NAMES FRAMEWRK frmwrk32 PATHS "${EXCEL_SDK_LIBDIR}" REQUIRED)

include_directories(${PROJECT_SOURCE_DIR}/include)
file(GLOB SOURCES CONFIGURE_DEPENDS "${PROJECT_SOURCE_DIR}/src/*.cpp")
add_library(${CMAKE_PROJECT_NAME} SHARED ${SOURCES})

target_include_directories(${CMAKE_PROJECT_NAME} PRIVATE ${EXCEL_SDK_INCLUDE_DIRS})
target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE ${XLCALL32_LIB} ${FRAMEWRK_LIB})

target_compile_definitions(${CMAKE_PROJECT_NAME} PRIVATE UNICODE _UNICODE WIN32_LEAN_AND_MEAN NOMINMAX)
if (MSVC)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
    target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE /W4 /permissive- /EHsc)
    set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
endif ()

message("PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR}")
set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES OUTPUT_NAME "${CMAKE_PROJECT_NAME}" SUFFIX ".xll")
set(DEPLOY_DIR "${PROJECT_SOURCE_DIR}/INSTALL/$<CONFIG>")
add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E make_directory "${DEPLOY_DIR}"
        COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_BINARY_DIR}/$<CONFIG> "${DEPLOY_DIR}"
)
